# controllers/propositions.ts
@@ -121,11 +121,8 @@ const propositions = {
         });
       });
       /* #swagger.responses[201] = {
-              description: 'Returns an object containing the result of the request and a string representing a MongoDB ObjectId.',
-              schema: {
-                      acknowledged: true,
-                      insertedId: "643f75ca2cec8ebd2a3cc16c"
-                  }
+              description: 'Returns an object containing the result of the request and a string representing a MongoDB ObjectId.',              
+              schema: { $ref: '#/definitions/Proposition' }
       } */
       res.status(201).json(newProposition);
     } catch (err) {
@@ -258,12 +255,6 @@ const propositions = {
               ]
           }] */
     // #swagger.summary = "This endpoint returns all propositions for a given ward."
-    /*  #swagger.parameters['newProposition'] = {
-                  in: 'body',
-                  description: 'An object representing a new proposition',
-                  required: true,
-                  schema: [{ $ref: '#/definitions/Proposition' }]
-          } */
     /*  #swagger.parameters['wardId'] = {
             in: 'path',
             description: 'A MongoDB ObjectId',
@@ -286,6 +277,10 @@ const propositions = {
           $in: memberIds,
         },
       })) as Proposition[];
+      /* #swagger.responses[200] = {
+              description: 'Returns an array of proposition objects.',
+              schema: [{ $ref: '#/definitions/Proposition' }],
+      } */
       res.status(200).json(propositions);
     } catch (err) {
       /* #swagger.responses[500] = {
@@ -302,12 +297,6 @@ const propositions = {
               ]
           }] */
     // #swagger.summary = "This endpoint returns all propositions for a given stake."
-    /*  #swagger.parameters['newProposition'] = {
-                  in: 'body',
-                  description: 'An object representing a new proposition',
-                  required: true,
-                  schema: [{ $ref: '#/definitions/Proposition' }]
-          } */
     /*  #swagger.parameters['stakeId'] = {
             in: 'path',
             description: 'A MongoDB ObjectId',
@@ -337,6 +326,10 @@ const propositions = {
           $in: memberIds,
         },
       })) as Proposition[];
+      /* #swagger.responses[200] = {
+              description: 'Returns an array of proposition objects.',
+              schema: [{ $ref: '#/definitions/Proposition' }],
+      } */
       res.status(200).json(propositions);
     } catch (err) {
       /* #swagger.responses[500] = {
@@ -397,7 +390,8 @@ const propositions = {
         },
       })) as Proposition[];
       /* #swagger.responses[200] = {
-              description: 'Returns an array of proposition objects.'
+              description: 'Returns an array of proposition objects.',
+              schema: [{ $ref: '#/definitions/Proposition' }],
       } */
       res.status(200).json(propositions);
     } catch (err) {
@@ -454,7 +448,8 @@ const propositions = {
         },
       })) as Proposition[];
       /* #swagger.responses[200] = {
-              description: 'Returns an array of proposition objects.'
+              description: 'Returns an array of proposition objects.',
+              schema: [{ $ref: '#/definitions/Proposition' }],
       } */
       res.status(200).json(propositions);
     } catch (err) {
